--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -347,7 +347,7 @@ The remaining parameters are updated using numerical optimization.
 
 Finite mixture models, combined with ordered stereotype regression, offer a technique for cluster prediction in ordinal data analysis. This method posits that a population can be probabilistically segmented into more homogeneous clusters, potentially enhancing prediction accuracy.
 
-In our study, we will concentrate on raw clusters with (Ordered Stereotype Regression Model) OSRM as an example to demonstrate our prediction method. It is feasible to apply this approach to other types, such as column clusters, or to models like POM.
+In our study, we will concentrate on raw clusters with (Ordered Stereotype Model) OSM as an example to demonstrate our prediction method. It is feasible to apply this approach to other types, such as column clusters, or to models like POM.
 
 \subsection{Data Structuring and Model Training}
 
