--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -173,7 +173,7 @@ URL = {https://doi.org/10.1214/09-SS053}
 }
 
 @misc{clustord2024,
-  author = {McMillan, Louise and Seers, Blake},
+  author = {Louise McMillan, Daniel Fern{\'a}ndez,Ying Cui},
   title = {ClustOrd: A tool for ordering and clustering},
   year = {2024},
   howpublished = {\url{https://github.com/vuw-clustering/clustord}},
