refine future work section title

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -416,7 +416,7 @@ The predictive model can also be applied to future observations ($Y'''$). Using 
 % The 2016 iteration of the survey witnessed participation from employees across 11 public sector entities, boasting a response rate of 53\% and culminating in 3,883 valid responses. This dataset, encompassing individual responses, the survey instrument, and a summary of results, is disseminated under the Creative Commons Attribution 3.0 Australia license, providing a rich resource for analysis and application of the discussed predictive clustering approach.
 
 
-\subsection{Future Application Context and Dataset Plans}
+\subsection{Future Validation of Predictive Clustering Method and Dataset Plans}
 
 In the future, we aim to validate the effectiveness of our cluster prediction method by planning its application to the Public Sector Commission WA Employee Perception Survey 2016. 
 This particular survey, conducted by the Public Sector Commission of Western Australia, is a rich resource that offers insights into various pivotal workplace factors, including leadership dynamics, communication efficacy, and work-life balance. 
