add more desc of future investigate of eval matrics

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -425,6 +425,8 @@ Its findings are critical for understanding the nuances of organizational cultur
 The 2016 survey edition attracted participation from employees across 11 public sector entities, achieving a response rate of 53\% and collecting 3,883 valid responses. 
 This comprehensive dataset includes individual responses, the survey instrument, and a summary of results. It is available under the Creative Commons Attribution 3.0 Australia license, making it an ideal candidate for analyzing and applying our discussed predictive clustering approach.
 
+An integral aspect of our future work will also involve identifying and selecting the most appropriate evaluation metrics for assessing the efficacy of our predictive clustering method. While traditional clustering evaluation metrics, such as silhouette score, Davies–Bouldin index, or Caliński-Harabasz index, may provide initial insights, the unique characteristics of our problem may necessitate the investigation of novel metrics tailored to our specific objectives. 
+
 It is important to clarify that, as of now, we have not yet tested our method on this dataset due to constraints on our timeline. This step remains a crucial part of our research agenda, and we intend to pursue it as a future work direction. 
 Our anticipation is that the application of our predictive clustering method to this dataset will not only showcase its utility but also provide actionable insights for enhancing public sector workplace environments.
 
