--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -173,10 +173,10 @@ URL = {https://doi.org/10.1214/09-SS053}
 }
 
 @misc{clustord2024,
-  author = {Louise McMillan, Daniel Fern{\'a}ndez,Ying Cui},
+  author = {McMillan, L. and Cui, Y. and Fernández, D.},
   title = {ClustOrd: A tool for ordering and clustering},
   year = {2024},
-  howpublished = {\url{https://github.com/vuw-clustering/clustord}},
+  url = {https://github.com/vuw-clustering/clustord},
   note = {Accessed: 2024-04-04}
 }
 
